--- a/device-types/Cisco/N3K-C3172PQ-10GE.yaml
+++ b/device-types/Cisco/N3K-C3172PQ-10GE.yaml
@@ -5,6 +5,8 @@ part_number: N3K-C3172PQ-10GE
 slug: cisco-n3k-c3172pq-10ge
 u_height: 1
 is_full_depth: false
+weight: 18.6
+weight_unit: lb
 console-ports:
   - name: Console
     type: rj-45
